# sisoc-legacy

./: CMakeLists.txt  README.md
.github/workflows/: ci.yaml
src/: main.cpp  mainwindow.cpp  mainwindow.h  sinkinputwidget.cpp  sinkinputwidget.h  sinkwidget.cpp  sinkwidget.h  sisoc.cpp  sisoc.h
